Fix post-author meta left padding
The author meta was not left padded by itself, but was relying on the
author image pushing it to the right. On mobile, when lines are
squished, the meta text would easily fall under the image, breaking
the design of the section.
This fix adds padding for the meta section itself, keeping all together.

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -185,8 +185,7 @@ section.share {
 }
 section.author h4 {
   margin: 0;
-  padding-top: 4px;
-  padding-left: 99px;
+  margin-left: 103px;
 }
 section.author p,
 section.share p {
@@ -217,8 +216,8 @@ section.share p.info {
 }
 section.author p.bio {
   font-size: 14px;
-  margin-left: 99px;
-  line-height: 1.2em;
+  padding-left: 103px;
+  line-height: 1.3em;
 }
 blockquote {
   font-family: "Open Sans Condensed", "Open Sans", "Helvetica Neue", Helvetica, Arial, "Nimbus L", sans-serif;
@@ -658,6 +657,7 @@ section.author .meta {
   font-family: "Roboto Slab", "Merriweather", "Open Sans", "Helvetica Neue", Helvetica, Arial, "Nimbus L", sans-serif;
   color: #bbbbbb;
   padding-top: 7px;
+  padding-left: 100px;
 }
 section.author .meta a {
   font-size: 12px;
